[package]
name = "blind_adaptor_schnorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen = { path="../blind_adaptor_schnorr/curv" }
kzen-paillier = "0.4"
rust-elgamal = "0.4.0"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
num-bigint = "0.3"
hex = "0.4"
anyhow = "1.0"
fancy-garbling = { path = "../blind_adaptor_schnorr/fancy-garbling", features=["serde1"] }
ocelot = { path = "../blind_adaptor_schnorr/ocelot" }
scuttlebutt = { path = "../blind_adaptor_schnorr/scuttlebutt" }

[dependencies.sha2]
version = "0.9"

[dev-dependencies]
criterion = "0.3"
